# another-fastapi-template

./: .env.example  .env.production  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/db/: database.py
scripts/: README-TEMPLATE.md  boilerplate-customizer.sh
src/: database.py
src/tasks/: controllers.py  models.py  router.py  schemas.py
src/utils/: logger.py
tests/: test_controllers.py
tests/tasks/: test_controllers.py  test_models.py  test_router.py  test_schemas.py
tests/units/: test_main.py
